Fix null pointer reference for extension.

When chrome running in autologin mode, extension is NULL.

R=benwells@chromium.org

Bug: 772557
Change-Id: I7edde3f498c8c4fecb093e8c5d0a0801cce9cd61